Move on/off to checkbox.
https://github.com/bibledit/cloud/issues/640

--- a/manage/privileges.html
+++ b/manage/privileges.html
@@ -30,5 +30,5 @@ translate("Can use advanced mode in Cloud.")
 
 <br>
 <p><a href="users">translate ("Go back.")</a></p>
-<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
+<script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
 <script type="text/javascript" src="privileges.js"></script>
