--- a/manage/write.html
+++ b/manage/write.html
@@ -18,4 +18,4 @@ translate("Toggle the modification privileges for entire Testaments"):
 <label for"emailconfirmationyourposts">##bookname##</label>
 </p>
 <!-- #ENDITERATION write -->
-<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
+<script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
