--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -77,4 +77,4 @@ translate("If the base or updated resources change after the snapshot, the clien
 <br>
 <p><a href="comparative9edit?delete=##name##">translate("Delete this resource")</a></p>
 <br>
-<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
+<script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
