Updates on checkboxes
https://github.com/bibledit/cloud/issues/640

--- a/checks/settings.html
+++ b/checks/settings.html
@@ -11,86 +11,85 @@ translate("It will be checked every night.")
 <p>##journal##</p>
 <br>
 <p>translate("Enable the desired checks:")</p>
-
 <p>
-<input type="checkbox" name="doublespacesusfm" onchange="checkbox(this)" ##doublespacesusfm## />
+<input type="checkbox" name="doublespacesusfm" onchange="checkbox_v2(this)" ##doublespacesusfm## />
 translate("double spaces in the raw USFM")
 </p>
 
 <p>
-<input type="checkbox" name="fullstopheadings" onchange="checkbox(this)" ##fullstopheadings## />
+<input type="checkbox" name="fullstopheadings" onchange="checkbox_v2(this)" ##fullstopheadings## />
 translate("punctuation at the end of a heading")
 </p>
 
 <p>
-<input type="checkbox" name="spacebeforepunctuation" onchange="checkbox(this)" ##spacebeforepunctuation## />
+<input type="checkbox" name="spacebeforepunctuation" onchange="checkbox_v2(this)" ##spacebeforepunctuation## />
 translate("a space before a comma, semicolon, colon, full stop, question mark, or exclamation mark")
 </p>
 
 <p>
-<input type="checkbox" name="sentencestructure" onchange="checkbox(this)" ##sentencestructure## />
+<input type="checkbox" name="sentencestructure" onchange="checkbox_v2(this)" ##sentencestructure## />
 translate("sentence structure")
 </p>
 
 <p>
-<input type="checkbox" name="paragraphstructure" onchange="checkbox(this)" ##paragraphstructure## />
+<input type="checkbox" name="paragraphstructure" onchange="checkbox_v2(this)" ##paragraphstructure## />
 translate("paragraph starts with a capital and ends with a correct end marker")
 </p>
 
 <p>
-<input type="checkbox" name="booksversification" onchange="checkbox(this)" ##booksversification## />
+<input type="checkbox" name="booksversification" onchange="checkbox_v2(this)" ##booksversification## />
 translate("correct number of books according to the versification system")
 </p>
 
 <p>
-<input type="checkbox" name="chaptersversesversification" onchange="checkbox(this)" ##chaptersversesversification## />
+<input type="checkbox" name="chaptersversesversification" onchange="checkbox_v2(this)" ##chaptersversesversification## />
 translate("correct number of chapters and verses in existing books, according to the versification system")
 </p>
 
 <p>
-<input type="checkbox" name="wellformedusfm" onchange="checkbox(this)" ##wellformedusfm## />
+<input type="checkbox" name="wellformedusfm" onchange="checkbox_v2(this)" ##wellformedusfm## />
 translate("well formed USFM")
 </p>
 
 <p>
-<input type="checkbox" name="punctuationatendverse" onchange="checkbox(this)" ##punctuationatendverse## />
+<input type="checkbox" name="punctuationatendverse" onchange="checkbox_v2(this)" ##punctuationatendverse## />
 translate("missing punctuation at the end of a verse")
 </p>
 
 <p>
-<input type="checkbox" name="patterns" onchange="checkbox(this)" ##patterns## />
+<input type="checkbox" name="patterns" onchange="checkbox_v2(this)" ##patterns## />
 translate("patterns in the text")
 [<a href="settingspatterns">translate("settings")</a>]
 </p>
 
 <p>
-<input type="checkbox" name="pairs" onchange="checkbox(this)" ##pairs## />
+<input type="checkbox" name="pairs" onchange="checkbox_v2(this)" ##pairs## />
 translate("matching pairs")
 [<a href="settingspairs">translate("settings")</a>]
 </p>
 
 <p>
-<input type="checkbox" name="spaceendverse" onchange="checkbox(this)" ##spaceendverse## />
+<input type="checkbox" name="spaceendverse" onchange="checkbox_v2(this)" ##spaceendverse## />
 translate("space at the end of a verse")
 </p>
 
 <p>
-<input type="checkbox" name="frenchpunctuation" onchange="checkbox(this)" ##frenchpunctuation## />
+<input type="checkbox" name="frenchpunctuation" onchange="checkbox_v2(this)" ##frenchpunctuation## />
 translate("no-break space at French punctuation")
 </p>
 
 <p>
-<input type="checkbox" name="frenchcitation" onchange="checkbox(this)" ##frenchcitation## />
+<input type="checkbox" name="frenchcitation" onchange="checkbox_v2(this)" ##frenchcitation## />
 translate("multiple « in French citation style")
 </p>
 
 <p>
-<input type="checkbox" name="transposenotes" onchange="checkbox(this)" ##transposenotes## />
+<input type="checkbox" name="transposenotes" onchange="checkbox_v2(this)" ##transposenotes## />
 translate("transpose and fix double spaces in footnotes and cross references")
 </p>
 
 <p>
-<input type="checkbox" name="validutf8" onchange="checkbox(this)" ##validutf8## />
+<input type="checkbox" name="validutf8" onchange="checkbox_v2(this)" ##validutf8## />
 translate("valid UTF-8 Unicode text")
 </p>
 
