--- a/manage/exports.html
+++ b/manage/exports.html
@@ -12,8 +12,9 @@
 
 <h3>translate("Web")</h3>
 <p>
+
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="web" onchange="checkbox(this)" ##web## /> translate("Export during the night.")
+<input type="checkbox" name="web" onchange="checkbox_v2(this)" ##web## /> translate("Export during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?webnow=">translate("Export now.")</a>
 </p>
@@ -29,28 +30,28 @@
 <h3>translate("Html")</h3>
 <p>
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="html" onchange="checkbox(this)" ##html## /> translate("Export during the night.")
+<input type="checkbox" name="html" onchange="checkbox_v2(this)" ##html## /> translate("Export during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?htmlnow=">translate("Export now.")</a>
 </p>
 <p>
-<input type="checkbox" name="htmlpopup" onchange="checkbox(this)" ##htmlpopup## /> translate("Display footnote on hovering above footnote caller.")
+<input type="checkbox" name="htmlpopup" onchange="checkbox_v2(this)" ##htmlpopup## /> translate("Display footnote on hovering above footnote caller.")
 </p>
 
 <h3>translate("Full USFM")</h3>
 <p>
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="usfm" onchange="checkbox(this)" ##usfm## /> translate("Export during the night.")
+<input type="checkbox" name="usfm" onchange="checkbox_v2(this)" ##usfm## /> translate("Export during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?usfmnow=">translate("Export now.")</a>
 </p>
 <br>
-<p><input type="checkbox" name="usfmsecure" onchange="checkbox(this)" ##usfmsecure## /> translate("Secure the export with the password.")</p>
+<p><input type="checkbox" name="usfmsecure" onchange="checkbox_v2(this)" ##usfmsecure## /> translate("Secure the export with the password.")</p>
 
 <h3>translate("Basic USFM and Text")</h3>
 <p>
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="text" onchange="checkbox(this)" ##text## /> translate("Export during the night.")
+<input type="checkbox" name="text" onchange="checkbox_v2(this)" ##text## /> translate("Export during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?textnow=">translate("Export now.")</a>
 </p>
@@ -58,13 +59,13 @@
 <h3>translate("OpenDocument")</h3>
 <p>
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="odt" onchange="checkbox(this)" ##odt## /> translate("Export during the night.")
+<input type="checkbox" name="odt" onchange="checkbox_v2(this)" ##odt## /> translate("Export during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?odtnow=">translate("Export now.")</a>
 </p>
 <br>
 <p>
-<input type="checkbox" name="dropcaps" onchange="checkbox(this)" ##dropcaps## />
+<input type="checkbox" name="dropcaps" onchange="checkbox_v2(this)" ##dropcaps## />
 translate("Use frames for OpenDocument format in case the chapter number gets put just before the first verse in drop caps.")
 </p>
 <br>
@@ -79,12 +80,12 @@ translate("Use frames for OpenDocument format in case the chapter number gets pu
 </table>
 <br>
 <p>
-<input type="checkbox" name="dateinheader" onchange="checkbox(this)" ##dateinheader## />
+<input type="checkbox" name="dateinheader" onchange="checkbox_v2(this)" ##dateinheader## />
 translate("Display the current date in the running headers.")
 </p>
 <br>
 <p>
-  <input type="checkbox" name="odtsecure" onchange="checkbox(this)" ##odtsecure## />
+  <input type="checkbox" name="odtsecure" onchange="checkbox_v2(this)" ##odtsecure## />
   translate("Secure the export with the password.")
 </p>
 <br>
@@ -107,7 +108,7 @@ translate("The type of space to insert after a verse number")
 <h3>translate("Info document")</h3>
 <p>
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="info" onchange="checkbox(this)" ##info## /> translate("Generate during the night.")
+<input type="checkbox" name="info" onchange="checkbox_v2(this)" ##info## /> translate("Generate during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?infonow=">translate("Generate now.")</a>
 </p>
@@ -115,7 +116,7 @@ translate("The type of space to insert after a verse number")
 <h3>translate("e-Sword")</h3>
 <p>
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="esword" onchange="checkbox(this)" ##esword## /> translate("Export during the night.")
+<input type="checkbox" name="esword" onchange="checkbox_v2(this)" ##esword## /> translate("Export during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?eswordnow=">translate("Export now.")</a>
 </p>
@@ -123,7 +124,7 @@ translate("The type of space to insert after a verse number")
 <h3>translate("Online Bible")</h3>
 <p>
 <!-- #BEGINZONE cloud -->
-<input type="checkbox" name="onlinebible" onchange="checkbox(this)" ##onlinebible## /> translate("Export during the night.")
+<input type="checkbox" name="onlinebible" onchange="checkbox_v2(this)" ##onlinebible## /> translate("Export during the night.")
 <!-- #ENDZONE cloud -->
 <a href="?onlinebiblenow=">translate("Export now.")</a>
 </p>
