--- a/manage/privileges.html
+++ b/manage/privileges.html
@@ -3,6 +3,7 @@
 <p>translate("User:") ##user##.</p>
 <br>
 
+<!--Todo update checkbox - es-->
 <p>
 <input type="checkbox" name="viewresources" onchange="checkbox(this, 'privileges?user=##user##')" ##viewresourceschecked## ##viewresourcesdisabled## />
 translate("Can view the resources.")
