--- a/manage/write.html
+++ b/manage/write.html
@@ -14,6 +14,7 @@ translate("Toggle the modification privileges for entire Testaments"):
 <br>
 <!-- #BEGINITERATION write -->
 <p>
+<!--Todo update-->
 <input type="checkbox" name="##checkboxname##" onchange="checkbox(this)" ##checked## />
 <label for"emailconfirmationyourposts">##bookname##</label>
 </p>
