--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -53,6 +53,7 @@ translate("Example"): ῃ=η ῳ=ω search=replace
 
 <br>
 <p>
+<!--Todo update checkbox-->
 <input type="checkbox" name="diacritics" onchange="checkbox(this,undefined,'##name##')" ##diacritics## />
 translate("Remove diacritics from the resources before doing the comparison.")
 </p>
