--- a/user/notifications.html
+++ b/user/notifications.html
@@ -9,6 +9,7 @@
 <p class="error">##error##</p>
 <h3>translate("Consultation Notes")</h3>
 <p>
+<!--Todo update all -->
 <input type="checkbox" name="editednotessubscription" onchange="checkbox(this)" ##editednotessubscription## />
 translate("Subscribe to a consultation note I created or edited online or by email.")
 </p>
