--- a/bb/settings.html
+++ b/bb/settings.html
@@ -56,11 +56,11 @@
 <!-- #BEGINZONE write_access -->
 <!-- #BEGINZONE server -->
 <p>
-<input type="checkbox" name="public" onchange="checkbox(this, 'settings?bible=##bible##')" ##public## />
+<input type="checkbox" name="public" onchange="checkbox_v2(this, '##bible##')" ##public## />
 translate("The public can give feedback")
 </p>
 <p>
-<input type="checkbox" name="rss" onchange="checkbox(this, 'settings?bible=##bible##')" ##rss## />
+<input type="checkbox" name="rss" onchange="checkbox_v2(this, '##bible##')" ##rss## />
 <a href="/##systemindex##">translate("Send the changes to the RSS feed")</a>
 </p>
 <p><a href="?bible=##bible##&resource=">translate("Import text from a resource")</a></p>
