--- a/sendreceive/index.html
+++ b/sendreceive/index.html
@@ -101,6 +101,7 @@ translate("Send it now.")
 <!-- #ENDZONE gitwrite -->
 </a></p>
 <p>
+<!--Todo update-->
 <input type="checkbox" name="repeatbible" onchange="checkbox(this)" ##repeatbible## />
 <!-- #BEGINZONE gitreadwrite -->
 translate("Send and receive it every five minutes.")
