Update more on/off switches
https://github.com/bibledit/cloud/issues/640

--- a/manage/privileges.html
+++ b/manage/privileges.html
@@ -3,29 +3,28 @@
 <p>translate("User:") ##user##.</p>
 <br>
 
-<!--Todo update checkbox - es-->
 <p>
-<input type="checkbox" name="viewresources" onchange="checkbox(this, 'privileges?user=##user##')" ##viewresourceschecked## ##viewresourcesdisabled## />
+<input type="checkbox" name="viewresources" onchange="checkbox_v2(this, '##user##')" ##viewresourceschecked## ##viewresourcesdisabled## />
 translate("Can view the resources.")
 </p>
 
 <p>
-<input type="checkbox" id="view" name="viewnotes" onchange="checkbox(this, 'privileges?user=##user##')" ##viewnoteschecked## ##viewnotesdisabled## />
+<input type="checkbox" id="view" name="viewnotes" onchange="checkbox_v2(this, '##user##')" ##viewnoteschecked## ##viewnotesdisabled## />
 translate("Can view the consultation notes.")
 </p>
 
 <p>
-<input type="checkbox" id="create" name="createcommentnotes" onchange="checkbox(this, 'privileges?user=##user##')" ##createcommentnoteschecked## ##createcommentnotesdisabled## />
+<input type="checkbox" id="create" name="createcommentnotes" onchange="checkbox_v2(this, '##user##')" ##createcommentnoteschecked## ##createcommentnotesdisabled## />
 translate("Can create and comment on consultation notes.")
 </p>
 
 <p>
-<input type="checkbox" name="deletenotes" onchange="checkbox(this, 'privileges?user=##user##')" ##deletenoteschecked## ##deletenotesdisabled## />
+<input type="checkbox" name="deletenotes" onchange="checkbox_v2(this, '##user##')" ##deletenoteschecked## ##deletenotesdisabled## />
 translate("Can delete consultation notes.")
 </p>
 
 <p>
-<input type="checkbox" name="useadvancedmode" onchange="checkbox(this, 'privileges?user=##user##')" ##useadvancedmodechecked## ##useadvancedmodedisabled## />
+<input type="checkbox" name="useadvancedmode" onchange="checkbox_v2(this, '##user##')" ##useadvancedmodechecked## ##useadvancedmodedisabled## />
 translate("Can use advanced mode in Cloud.")
 </p>
 
