--- a/manage/write.html
+++ b/manage/write.html
@@ -14,9 +14,8 @@ translate("Toggle the modification privileges for entire Testaments"):
 <br>
 <!-- #BEGINITERATION write -->
 <p>
-<!--Todo update-->
-<input type="checkbox" name="##checkboxname##" onchange="checkbox(this)" ##checked## />
-<label for"emailconfirmationyourposts">##bookname##</label>
+<input type="checkbox" name="##checkboxname##" onchange="checkbox_v2(this)" ##checked## />
+<label for"##checkboxname##">##bookname##</label>
 </p>
 <!-- #ENDITERATION write -->
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
