More updates about on/off
https://github.com/bibledit/cloud/issues/640

--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -53,20 +53,19 @@ translate("Example"): ῃ=η ῳ=ω search=replace
 
 <br>
 <p>
-<!--Todo update checkbox-->
-<input type="checkbox" name="diacritics" onchange="checkbox(this,undefined,'##name##')" ##diacritics## />
+<input type="checkbox" name="diacritics" onchange="checkbox_v2(this, '##name##')" ##diacritics## />
 translate("Remove diacritics from the resources before doing the comparison.")
 </p>
 
 <br>
 <p>
-<input type="checkbox" name="casefold" onchange="checkbox(this,undefined,'##name##')" ##casefold## />
+<input type="checkbox" name="casefold" onchange="checkbox_v2(this, '##name##')" ##casefold## />
 translate("Do case folding of the resources before doing the comparison.")
 </p>
 
 <br>
 <p>
-<input type="checkbox" name="cache" onchange="checkbox(this,undefined,'##name##')" ##cache## />
+<input type="checkbox" name="cache" onchange="checkbox_v2(this, '##name##')" ##cache## />
 translate("Cache the resource on client devices.")
 translate("Caching makes the resource available offline.")
 translate("Caching makes a snapshot of the base and updated resources.")
