--- a/sendreceive/index.html
+++ b/sendreceive/index.html
@@ -101,8 +101,7 @@ translate("Send it now.")
 <!-- #ENDZONE gitwrite -->
 </a></p>
 <p>
-<!--Todo update-->
-<input type="checkbox" name="repeatbible" onchange="checkbox(this)" ##repeatbible## />
+<input type="checkbox" name="repeatbible" onchange="checkbox_v2(this)" ##repeatbible## />
 <!-- #BEGINZONE gitreadwrite -->
 translate("Send and receive it every five minutes.")
 <!-- #ENDZONE gitreadwrite -->
