--- a/user/notifications.html
+++ b/user/notifications.html
@@ -9,58 +9,57 @@
 <p class="error">##error##</p>
 <h3>translate("Consultation Notes")</h3>
 <p>
-<!--Todo update all -->
-<input type="checkbox" name="editednotessubscription" onchange="checkbox(this)" ##editednotessubscription## />
+<input type="checkbox" name="editednotessubscription" onchange="checkbox_v2(this)" ##editednotessubscription## />
 translate("Subscribe to a consultation note I created or edited online or by email.")
 </p>
 
 <p>
-<input type="checkbox" name="anynotessubscription" onchange="checkbox(this)" ##anynotessubscription## />
+<input type="checkbox" name="anynotessubscription" onchange="checkbox_v2(this)" ##anynotessubscription## />
 translate("Subscribe to a consultation note created or edited by anybody online or by email.")
 </p>
 
 <p>
-<input type="checkbox" name="emailconfirmationyourposts" onchange="checkbox(this)" ##emailconfirmationyourposts## />
+<input type="checkbox" name="emailconfirmationyourposts" onchange="checkbox_v2(this)" ##emailconfirmationyourposts## />
 translate("Receive email confirmation of my posts to a consultation notes done by email.")
 </p>
 
 <p>
-<input type="checkbox" name="subscribednotenotification" onchange="checkbox(this)" ##subscribednotenotification## />
+<input type="checkbox" name="subscribednotenotification" onchange="checkbox_v2(this)" ##subscribednotenotification## />
 translate("Receive email about changes in a consultation note I am subscribed to.")
 </p>
 
 <p>
-<input type="checkbox" name="notesassignment" onchange="checkbox(this)" ##notesassignment## />
+<input type="checkbox" name="notesassignment" onchange="checkbox_v2(this)" ##notesassignment## />
 translate("A consultation note that gets changed will be assigned to me.")
 </p>
 
 <p>
-<input type="checkbox" name="assignednotenotification" onchange="checkbox(this)" ##assignednotenotification## />
+<input type="checkbox" name="assignednotenotification" onchange="checkbox_v2(this)" ##assignednotenotification## />
 translate("Receive email about changes in a consultation note assigned to me.")
 </p>
 
 <p>
-<input type="checkbox" name="suppressemailsfromnotesyouupdated" onchange="checkbox(this)" ##suppressemailsfromnotesyouupdated## />
+<input type="checkbox" name="suppressemailsfromnotesyouupdated" onchange="checkbox_v2(this)" ##suppressemailsfromnotesyouupdated## />
 translate("Suppress receiving email from an updated consultation note if the update was made by me.")
 </p>
 
 <p>
-<input type="checkbox" name="assignednotesnotification" onchange="checkbox(this)" ##assignednotesnotification## />
+<input type="checkbox" name="assignednotesnotification" onchange="checkbox_v2(this)" ##assignednotesnotification## />
 translate("Receive daily mail with the number of consultation notes assigned to me.")
 </p>
 
 <p>
-<input type="checkbox" name="subscribednotesnotification" onchange="checkbox(this)" ##subscribednotesnotification## />
+<input type="checkbox" name="subscribednotesnotification" onchange="checkbox_v2(this)" ##subscribednotesnotification## />
 translate("Receive daily mail with the number of consultation notes I am subscribed to.")
 </p>
 
 <p>
-<input type="checkbox" name="deletednotenotification" onchange="checkbox(this)" ##deletednotenotification## />
+<input type="checkbox" name="deletednotenotification" onchange="checkbox_v2(this)" ##deletednotenotification## />
 translate("Receive email about a deleted consultation note.")
 </p>
 
 <p>
-<input type="checkbox" name="postponenewnotesmails" onchange="checkbox(this)" ##postponenewnotesmails## />
+<input type="checkbox" name="postponenewnotesmails" onchange="checkbox_v2(this)" ##postponenewnotesmails## />
 translate("Emails that would normally be sent right after I have created a consultation note, delay them till the evening.")
 translate("This setting may be useful in the following scenario:")
 translate("Each time I create a new note, the other members of the team get interrupted by my email.")
@@ -72,7 +71,7 @@ translate("Tick this setting, and I am done.")
 <p>
 translate("Assign notes I create to these users:")
 <!-- #BEGINITERATION autoassign -->
-| <input type="checkbox" name="autoassign##user##" onchange="checkbox(this)" ##assign## /> ##user##
+| <input type="checkbox" name="autoassign##user##" onchange="checkbox_v2(this)" ##assign## /> ##user##
 <!-- #ENDITERATION autoassign -->
 </p>
 
@@ -80,36 +79,36 @@ translate("Assign notes I create to these users:")
 
 <!-- #BEGINZONE writebible -->
 <p>
-<input type="checkbox" name="mychangesemailnotifications" onchange="checkbox(this)" ##mychangesemailnotifications## />
+<input type="checkbox" name="mychangesemailnotifications" onchange="checkbox_v2(this)" ##mychangesemailnotifications## />
 translate("Receive daily mail with the changes in the Bible made by me.")
 </p>
 <!-- #ENDZONE writebible -->
 
 <!-- #BEGINZONE readbible -->
 <p>
-<input type="checkbox" name="anyonechangesemailnotification" onchange="checkbox(this)" ##anyonechangesemailnotification## />
+<input type="checkbox" name="anyonechangesemailnotification" onchange="checkbox_v2(this)" ##anyonechangesemailnotification## />
 translate("Receive daily mail with the changes in the Bible made by anyone.")
 </p>
 <!-- #ENDZONE readbible -->
 
 <!-- #BEGINZONE consultant -->
 <p>
-<input type="checkbox" name="anyonechangesonlinenotifications" onchange="checkbox(this)" ##anyonechangesonlinenotifications## />
+<input type="checkbox" name="anyonechangesonlinenotifications" onchange="checkbox_v2(this)" ##anyonechangesonlinenotifications## />
 <a href="../changes/changes">translate("Notifications about changes in the Bible made by anyone will be generated for me online.")</a>
 </p>
 
 <p>
-<input type="checkbox" name="mychangesonlinenotifications" onchange="checkbox(this)" ##mychangesonlinenotifications## />
+<input type="checkbox" name="mychangesonlinenotifications" onchange="checkbox_v2(this)" ##mychangesonlinenotifications## />
 <a href="../changes/changes">translate("Notifications about changes in the Bible made by me will be generated for me online.")</a>
 </p>
 
 <p>
-<input type="checkbox" name="contributorschangesonlinenotifications" onchange="checkbox(this)" ##contributorschangesonlinenotifications## />
+<input type="checkbox" name="contributorschangesonlinenotifications" onchange="checkbox_v2(this)" ##contributorschangesonlinenotifications## />
 <a href="../changes/changes">translate("Notifications about changes in the Bible made by the individual contributors will be generated for me online.")</a>
 </p>
 
 <p>
-<input type="checkbox" name="pendingchangenotifications" onchange="checkbox(this)" ##pendingchangenotifications## />
+<input type="checkbox" name="pendingchangenotifications" onchange="checkbox_v2(this)" ##pendingchangenotifications## />
 translate("Receive daily mail with the number of online change notifications awaiting my attention.")
 </p>
 <!-- #ENDZONE consultant -->
@@ -118,14 +117,14 @@ translate("Receive daily mail with the number of online change notifications awa
 <h3>translate("Text Checks")</h3>
 
 <p>
-<input type="checkbox" name="biblechecksnotification" onchange="checkbox(this)" ##biblechecksnotification## />
+<input type="checkbox" name="biblechecksnotification" onchange="checkbox_v2(this)" ##biblechecksnotification## />
 translate("Receive daily mail with results of checks on the text of the Bibles.")
 </p>
 
 <h3>translate("Team work")</h3>
 
 <p>
-<input type="checkbox" name="sprintprogressnotification" onchange="checkbox(this)" ##sprintprogressnotification## />
+<input type="checkbox" name="sprintprogressnotification" onchange="checkbox_v2(this)" ##sprintprogressnotification## />
 <a href="../sprint/index">translate("Receive weekly mail about the team's progress during the course of the sprint.")</a>
 </p>
 <!-- #ENDZONE consultant -->
