--- a/resource/organize.html
+++ b/resource/organize.html
@@ -11,8 +11,7 @@
 <br>
 <p>translate("Number of verses to display before the focused verse:") <a href="?before">##before##</a></p>
 <p>translate("Number of verses to display after the focused verse:") <a href="?after">##after##</a></p>
-<!--Todo update -->
-<p><input type="checkbox" name="related" onchange="checkbox(this)" ##related## />
+<p><input type="checkbox" name="related" onchange="checkbox_v2(this)" ##related## />
 translate("Display related passages")</p>
 <!-- #BEGINZONE client -->
 <p><a href="?install">translate("Install all the above resources on the device.")</a></p>
