--- a/system/index.html
+++ b/system/index.html
@@ -31,8 +31,7 @@ translate("The timezone for Bibledit as an offset from Coordinated Universal Tim
 <a href="/##rssfeed##">translate("RSS feed for the recent changes in the text of the Bible.")</a>
 </p>
 <p>
-<!--Todo update-->
-<input type="checkbox" name="rssauthor" onchange="checkbox(this)" ##rssauthor## />
+<input type="checkbox" name="rssauthor" onchange="checkbox_v2(this)" ##rssauthor## />
 translate("Include the author in the RSS feed.")
 </p>
 <p>
@@ -91,8 +90,7 @@ translate("You can add or remove fonts in Bibledit Cloud:")
 <h3>translate("Cache")</h3>
 <p><a href="?clearcache=">translate("Clear the web cache and the resources cache now.")</a></p>
 <p>
-<!--Todo-->
-<input type="checkbox" name="keepcache" onchange="checkbox(this)" ##keepcache## />
+<input type="checkbox" name="keepcache" onchange="checkbox_v2(this)" ##keepcache## />
 translate("Keep the resources cache for an extended period of time.")
 translate("This makes the second and subsequent resources downloads by Bibledit clients much faster.")
 </p>
