Slightly better layout max editing difference
Fixes https://github.com/bibledit/cloud/issues/642

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -107,18 +107,16 @@ translate("This safety mechanism prevents accidental loss of Bible data in many 
 translate("The permitted difference can be set below as a percentage.")
 </p>
 <p>translate("Maximum difference for:")</p>
-<table>
-  <tr>
-    <td><label for="chapterpercentage">translate("Chapter editors:")</label></td>
-    <td><input type="range" name="chapterpercentage" id="chapterpercentage" value="##chapterpercentage##" min="10" max="100"></td>
-    <td><label id="chapterpercentageval" for="chapterpercentage">##chapterpercentage##</label>%</td>
-  </tr>
-  <tr>
-    <td><label for="versepercentage">translate("Verse editor:")</label></td>
-    <td><input type="range" name="versepercentage" id="versepercentage" value="##versepercentage##" min="10" max="100"></td>
-    <td><label id="versepercentageval" for="versepercentage">##versepercentage##</label>%</td>
-  </tr>
-</table>
+<p>
+<label for="chapterpercentage">translate("Chapter editors:")</label>
+<input type="range" name="chapterpercentage" id="chapterpercentage" value="##chapterpercentage##" min="10" max="100">
+<label id="chapterpercentageval" for="chapterpercentage">##chapterpercentage##</label>%
+</p>
+<p>
+<label for="versepercentage">translate("Verse editor:")</label>
+<input type="range" name="versepercentage" id="versepercentage" value="##versepercentage##" min="10" max="100">
+<label id="versepercentageval" for="versepercentage">##versepercentage##</label>%
+</p>
 <!-- #ENDZONE bibles -->
 
 <br>
