--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.949: Passage history buttons available in basic mode.</p>
 <p>5.0.946: Html export with footnotes showing on hover.</p>
 <p>5.0.946: Deletes an email that caused a crash while it was being sent.</p>
 <p>5.0.945: Displays better text from StudyLight.</p>
