--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.953: Ctrl-F Find works again on Windows.</p>
 <p>5.0.952: Can download exported file on Windows again.</p>
 <p>5.0.950: Entry of workspace width defaults to using percents, not pixels.</p>
 <p>5.0.949: Passage history buttons available in basic mode.</p>
