Can enable or disable automatic daily check per Bible
https://github.com/bibledit/cloud/issues/656

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -78,4 +78,11 @@ translate("Stylesheet"):
 <!-- #ENDZONE write_access -->
 </p>
 
+<!-- #BEGINZONE server -->
+<p>
+<input type="checkbox" name="checks" onchange="checkbox_v2(this, '##bible##')" ##checks## />
+translate("Run an automatic daily check on the text")
+</p>
+<!-- #ENDZONE server -->
+
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
