--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.954: Bigger fonts for the Bible text in the merge irregularity email.</p>
 <p>5.0.954: Can enable or disable automatic daily check per Bible.</p>
 <p>5.0.953: Clearer links for dismissing change notifications.</p>
 <p>5.0.953: Fetches web-based Bibles from new GBS website.</p>
